# sentencefmricomparison

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/sentencefmricomparison/: __init__.py  cli.py  constants.py  utils.py
src/sentencefmricomparison/data/: __init__.py  preprocess_pereira.py
src/sentencefmricomparison/evaluation/: __init__.py  evaluate_sent_eval.py
src/sentencefmricomparison/models/: __init__.py  gpt3_embeddings.py  neural_encoder.py  preprocess_skipthoughts.py  sentence_embedding_base.py  text_to_image.py
src/sentencefmricomparison/rsa/: __init__.py  rsa_corr_analysis.py  rsa_pereira.py
src/sentencefmricomparison/visualization/: correlate_rsa_neural_enc.py  generate_corr_plots.py  visualize_brain_networks.py  visualize_conf_intervals.py  visualize_mapping_models.py
