##########################
# Setup.py Configuration #
##########################
[metadata]
name = sentencefmricomparison
version = 0.0.1-dev
description = Comparison of sentence embedding models and fMRI brain activations based on the Pereira dataset
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/helena-balabin/sentencefmricomparison
download_url = https://github.com/helena-balabin/sentencefmricomparison/releases
project_urls =
    Bug Tracker = https://github.com/helena-balabin/sentencefmricomparison/issues
    Source Code = https://github.com/helena-balabin/sentencefmricomparison

# Author information
author = helena balabin
author_email = helena.balabin@kuleuven.be
maintainer = helena balabin
maintainer_email = helena.balabin@kuleuven.be

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.6 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing
keywords =
    natural language processing 
    sentence transformers
    transformers 
    deep learning
    machine learning
    neuroscience 
    neurology

# This list of packages might create some dependency conflicts
[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Jupyter notebook
    jupyterlab
    ipywidgets
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # Environment variables
    python-dotenv
    # Logging
    loguru
    # General DS/ML stuff
    numpy 
    pandas
    openpyxl
    scikit-learn
    scipy
    tensorflow==1.9.0
    tensorflow_hub
    torch
    torchmetrics
    # NLP stuff
    transformers
    datasets
    gensim
    spacy
    tokenizers
    sentencepiece
    sentence-transformers
    skip-thoughts
    # SentEval needs to be installed manually by cloning https://github.com/facebookresearch/SentEval and using
    # pip install -e .
    # QuickThoughts needs to be manually packages and installed (pip install -e .) based on
    # https://github.com/RRisto/quickthoughts
    # MRI stuff
    rsatoolbox
    # Formatting 
    pylint
    flake8
    mypy
    black
    # Documenting and testing
    tox 
    sphinx 
    # Visualization
    matplotlib
    seaborn
    plotly
    prettytable
    # Misc
    pickle5

# Random options
zip_safe = false
include_package_data = True
python_requires = <3.7.0

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = sentencefmricomparison
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/sentencefmricomparison
    .tox/*/lib/python*/site-packages/sentencefmricomparison

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
